--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,29 +1,64 @@
-.header{
-    background-color: #000000;
-    color: white;
-    display: flex;
-    justify-content: center;
-}
-
-.headerContainer{
-    width: 100%;
-    max-width: 1024px;
-    margin: 10px 0px 10px 0px;
-}
-
-.headerList {
-    display: flex;
-    gap: 40px;
-}
-
-.headerListItem{
-    display: flex;
+ .header {
     align-items: center;
-    gap: 10px;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-between;
+    left: 0;
+    padding: 17px 60px;
+    position: relative;
+    top: 0;
 }
 
-.headerListItem.active{
-    border: 1px solid white;
-    padding: 7px;
-    border-radius: 20px;
+ .logo {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    width: 112px;
+}
+
+ .LOGO-IFGF-KAOS {
+    height: 20px;
+    object-fit: cover;
+    position: relative;
+    width: 45px;
+}
+
+ .text-wrapper {
+    color: #ffffff;
+    font-family: "Archivo-Regular", Helvetica;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: normal;
+    margin-top: -1px;
+    position: relative;
+    white-space: nowrap;
+    width: fit-content;
+}
+
+ .contact-us {
+    align-items: center;
+    display: inline-flex;
+    flex: 0 0 auto;
+    gap: 8px;
+    position: relative;
+}
+
+ .img {
+    height: 20px;
+    position: relative;
+    width: 20px;
+}
+
+ .text-wrapper-2 {
+    color: #ffffff;
+    font-family: "Archivo-Regular", Helvetica;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: normal;
+    position: relative;
+    white-space: nowrap;
+    width: fit-content;
 }
