--- a/client/src/pages/gym/gym.css
+++ b/client/src/pages/gym/gym.css
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: center;
     margin: 26px;
+    margin-bottom: 100px;
     gap: 20px;
 }
 
@@ -95,4 +96,17 @@
     width: 160px;
     height: 56px;
     padding-left: 10px;
+}
+
+.when-to-book {
+    text-align: center;
+    color: #000000;
+    font-family: "Archivo-Regular", Helvetica;
+    font-size: 24px;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: normal;
+    position: relative;
+    white-space: nowrap;
+    margin: 64px;
 }
